preview image change

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>science-bridge</title>
     <meta name="description" content="DXN Science Bridge" />
     <meta name="author" content="DXN" />
-    <meta property="og:image" content="/og-image.png" />
+    <meta property="og:image" content="/image.png" />
   </head>
 
   <body>
