fix: resolve blank page issues
- Update main.tsx with proper React mounting
- Add React.StrictMode wrapper
- Clean up index.html
- Remove unnecessary script
- Improve meta tags

--- a/index.html
+++ b/index.html
@@ -2,16 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>science-bridge</title>
-    <meta name="description" content="DXN Science Bridge" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <title>Science Bridge</title>
+    <meta name="description" content="DXN Science Bridge - Bridging the gap between science and society" />
     <meta name="author" content="DXN" />
     <meta property="og:image" content="/image.png" />
   </head>
-
   <body>
     <div id="root"></div>
-    <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
